2006-01-01 17:05  bchiara

	* src/: diagram.c, diagram.h: small performance changes and
	restructuring

2005-12-31 11:17  bchiara

	* ChangeLog: updated with latest developments

2005-12-31 09:00  bchiara

	* src/diagram.c: fix for 1372245

2005-12-30 16:36  bchiara

	* src/: capture.c, capture.h, diagram.c, eth_resolv.h, globals.h,
	links.c, names.c, names_netbios.c, names_netbios.h, node.c, node.h,
	protocols.c, protocols.h, resolv.c: still refactoring ...

2005-12-29 22:58  bchiara

	* src/: Makefile.am, capture.c, capture.h, decode_proto.c,
	decode_proto.h, diagram.c, info_windows.c, links.c, names.c,
	node.c, node.h, protocols.c, protocols.h: Code restructuring
	continues.  Moved protocol decoding to decode_proto.h/c, so now
	protocols.h/c contains only routines dealing with protocol stats. 
	Likewise, node.h/c and links.h/c handle node and link stats
	respectively.

2005-12-29 18:53  bchiara

	* config.h.in, configure.in, src/capture.c, src/capture.h,
	src/diagram.c, src/globals.h, src/info_windows.c, src/links.c,
	src/node.c, src/node.h: source restructuring continues...

2005-12-04 20:18  bchiara

	* TODO, m4/Makefile.am, src/Makefile.am, src/callbacks.c,
	src/capture.c, src/capture.h, src/conversations.c,
	src/conversations.h, src/diagram.c, src/diagram.h,
	src/direct_resolve.c, src/dns.c, src/dns.h, src/eth_resolv.h,
	src/globals.h, src/info_windows.c, src/info_windows.h, src/links.c,
	src/links.h, src/main.c, src/menus.c, src/menus.h, src/names.c,
	src/names.h, src/node.c, src/node.h, src/preferences.c,
	src/preferences.h, src/protocols.c, src/protocols.h, src/resolv.c,
	src/util.c, src/util.h: Heavy source restructuring.

2005-11-09 20:22  bchiara

	* src/: menus.c, util.c, util.h: added some debug code to
	get_interfaces_list

2005-11-04 20:42  bchiara

	* src/Makefile.am: force exporting of dynamic function to let
	libglade always see signals

2005-11-02 20:22  bchiara

	* ChangeLog: aligned

2005-11-01 08:26  bchiara
